# ElectronicTable

./: CMakeLists.txt  CmdInterpreter.cpp  CmdInterpreter.h  ExpressionParser.cpp  ExpressionParser.h  README.md  Table.cpp  Table.h  Tokenizer.cpp  Tokenizer.h  Types.h  main.cpp
public/: out_init.csv  workflow_complex.csv  workflow_deep_nesting.csv  workflow_division_by_zero.csv  workflow_logic.csv  workflow_missing_reference.csv  workflow_relative.csv
src/: CmdInterpreter.cpp  CmdInterpreter.h  ExpressionParser.cpp  ExpressionParser.h  Table.cpp  Table.h  Tokenizer.cpp  Tokenizer.h  Types.h  main.cpp
tests/: CmdInterpreterTests.cpp  ExpressionParserTest.cpp  TableTest.cpp  TokenizerTest.cpp
